--- a/exe-unit/components/transfer/Cargo.toml
+++ b/exe-unit/components/transfer/Cargo.toml
@@ -72,6 +72,7 @@ actix-files = "0.6"
 actix-web = "4"
 anyhow = "1.0"
 crossterm = "0.26.1"
+duration-string = "0.3"
 env_logger = "0.7"
 secp256k1 = { version = "0.27.0" }
 serial_test = { git = "https://github.com/tworec/serial_test.git", branch = "actix_rt_test", features = ["actix-rt2"]}
