--- a/exe-unit/components/mock-runtime/Cargo.toml
+++ b/exe-unit/components/mock-runtime/Cargo.toml
@@ -32,6 +32,11 @@ ya-runtime-api = "0.7"
 # Dependancies for ExeUnit testing utils
 ya-exe-unit = "0.4"
 ya-framework-basic = { version = "0.1" }
+ya-client-model = "0.6"
+ya-core-model = { version = "^0.9", features = ["activity", "appkey"] }
+ya-service-bus = "0.6"
 
 async-trait = "0.1.77"
 actix = { version = "0.13", default-features = false }
+hex = "0.4.3"
+rand = "0.8.5"
