--- a/goth_tests/pyproject.toml
+++ b/goth_tests/pyproject.toml
@@ -25,9 +25,9 @@ python = "^3.10.1,<3.11"
 pytest = "^7.4"
 pytest-asyncio = "0.21"
 pytest-split = "^0.8.1"
-goth = "0.15.12"
+# goth = "0.15.12"
 # to use development goth version uncomment below
-# goth = { git = "https://github.com/golemfactory/goth.git", rev = "b86c18e4f2eb8d00a9a1d09e0d94a85f4a23bd02" }
+goth = { git = "https://github.com/golemfactory/goth.git", rev = "dea9b79c47829d15d6a8f0139052b51fb0c8bdd3" }
 
 [tool.poetry.dev-dependencies]
 black = "21.7b0"
