--- a/exe-unit/Cargo.toml
+++ b/exe-unit/Cargo.toml
@@ -107,6 +107,7 @@ ya-sb-router = "0.6.1"
 
 actix-files = "0.6"
 actix-web = "4"
+duration-string = "0.3"
 env_logger = "0.7"
 rustyline = "7.0.0"
 serial_test = { git = "https://github.com/tworec/serial_test.git", branch = "actix_rt_test", features = ["actix-rt2"]}
