--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -13,11 +13,13 @@ on:
       - payments-dev
       - release/*
       - '**/all-tests'
+      - staszek/gamerhash-combined
   pull_request:
     branches:
       - master
       - payments-dev
       - release/*
+      - staszek/gamerhash-combined
 
 env:
   rust_stable: 1.71.1
