--- a/exe-unit/components/transfer/Cargo.toml
+++ b/exe-unit/components/transfer/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 
 [dependencies]
 ya-client-model = "0.6"
-ya-core-model = { version = "^0.9" }
+ya-core-model = { version = "0.9", features = ["activity"] }
 ya-service-bus = "0.6.1"
 ya-utils-path = { version ="0.1", path = "../../../utils/path" }
 ya-utils-futures = { version = "0.3", path = "../../../utils/futures" }
@@ -42,7 +42,7 @@ tokio-util = { version = "0.7", features = ["io"] }
 url = "2.1.1"
 walkdir = "2.3.1"
 async-trait = "0.1.74"
-tokio-stream = "0.1.14"
+tokio-stream = { version = "0.1.14", features = ["sync"] }
 
 [target.'cfg(target_family = "unix")'.dependencies]
 awc = { version = "3", features = ["openssl"] }
